[package]
name = "tonel"
version = "0.2.0"
edition = "2021"
authors = ["Saber Haj Rabiee"]
license = "MIT"
repository = "https://github.com/sabify/tonel"
keywords = ["tcp", "udp", "network", "tun", "tunnel"]
categories = ["network-programming"]
readme = "README.md"
description = """
A Multi-Stream UDP over TCP Tunneler for Lightning-Fast Network Layer 3 Transmission with TUN Interface.
"""


[[bin]]
name = "tonelc"
path = "src/bin/client.rs"

[[bin]]
name = "tonels"
path = "src/bin/server.rs"

[dependencies]
clap = { version = "4.0", features = ["cargo", "string"] }
socket2 = { version = "0.4", features = ["all"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
pnet = "0.31"
log = "0.4"
internet-checksum = "0.2"
tokio-tun = "0.7"
kanal = { git = "https://github.com/fereidani/kanal" }
fastrand = "1.8.0"
fxhash = "0.2.1"
dashmap = "5.4.0"
zeroize = "1.5.7"
tokio-util = "0.7"
pretty_env_logger = "0.4"
num_cpus = "1.13"
neli = "0.6"
nix = "0.26"
ctrlc = { version = "3.0", features = ["termination"] }
cfg-if = "1.0"
mimalloc = { version = "0.1", default-features = false, optional = true }
[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", optional = true }

[features]
default = []
alloc-mi = ["mimalloc"]
alloc-jem = ["jemallocator"]
benchmark = []

[dev-dependencies]
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
incremental = false
panic = "unwind"
strip = true
