[package]
name = "tonel"
version = "0.5.1"
edition = "2021"
authors = ["Saber Haj Rabiee"]
license = "MIT"
repository = "https://github.com/sabify/tonel"
keywords = ["tcp", "udp", "network", "tun", "tunnel"]
categories = ["network-programming"]
readme = "README.md"
description = """
A Multi-Stream UDP over TCP Tunneler for Lightning-Fast Network Layer 3 Transmission with TUN Interface.
"""


[[bin]]
name = "tonelc"
path = "src/bin/client.rs"

[[bin]]
name = "tonels"
path = "src/bin/server.rs"

[dependencies]
clap = { version = "4.2", features = ["cargo", "string"] }
socket2 = { version = "0.5.2", features = ["all"] }
tokio = { version = "1", features = ["full"] }
bytes = "1"
pnet = "0.33"
log = "0.4"
internet-checksum = "0.2"
object-pool = "0.5"
once_cell = "1.17.1"
tun = { version = "0.5", package = "forky-tun", features = ["async"] }
kanal = "0.1.0-pre8"
daemonize = "0.5.0"
fastrand = "1.9.0"
fxhash = "0.2.1"
dashmap = "5.4.0"
zeroize = "1.6.0"
tokio-util = "0.7"
env_logger = "0.10.0"
nix = "0.26"
ctrlc = { version = "3.2", features = ["termination"] }
cfg-if = "1.0"
mimalloc = { version = "0.1", default-features = false, optional = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { version = "0.5", optional = true }

[target.'cfg(any(target_os = "linux", target_os = "android"))'.dependencies]
neli = "0.6"

[features]
default = []
alloc-mi = ["mimalloc"]
alloc-jem = ["jemallocator"]
benchmark = []

[dev-dependencies]
rand = "0.8.5"

[profile.release]
lto = true
codegen-units = 1
incremental = false
panic = "unwind"
strip = true
